# faves

./: Cargo.toml  README.md  Trunk.toml  index.html  index.scss  tailwind.config.js  tailwind.css
assets/: Books.json  Movies.json  Music.json  Short Stories.json  TV Shows.json
docs/: faves-1e41dcffecbc9a4f.js  faves-1e41dcffecbc9a4f_bg.wasm  faves-2197b56f2fc1c9b8.js  faves-2197b56f2fc1c9b8_bg.wasm  faves-50cdd2ab562580a0.js  faves-50cdd2ab562580a0_bg.wasm  faves-6135e1ddb90f93e4_bg.wasm  faves-74f26ffc5dfed7aa.js  faves-74f26ffc5dfed7aa_bg.wasm  faves-b1059e9f987aeb10_bg.wasm  faves-cacc2329a155bff3.js  faves-cacc2329a155bff3_bg.wasm  faves-d4e619721dc3bd10.js  faves-d4e619721dc3bd10_bg.wasm  index-71ae181c3734d4f2.css  index-99e844bea9a72f6e.css  index.html  tailwind-2d48afae5f47129c.css  tailwind-9c3ca213f7701907.css
src/: category.rs  data.rs  home.rs  icons.rs  main.rs  not_found.rs
