[package]
name = "faves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7.4"
log = "0.4.27"
serde_json = "1.0.140"
urlencoding = "2.1.3"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
